# Obfuscator

./: CMakeLists.txt  CMakePresets.json  README.md
Obfuscator/: CMakeLists.txt
Obfuscator/Include/: Junk.h  StringObfuscator.h
Obfuscator/src/: Main.cpp
